<resources>
    <string name="app_name">Inventory App</string>

    <string name="editor_activity_title_new_product">Add new product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>


    <string name="category_name">Product name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier name</string>
    <string name="category_phonenumber">Supplier phone number</string>

    <string name="hint_product_name">Name of the book</string>
    <string name="hint_product_price">0</string>
    <string name="hint_product_quantity">0</string>
    <string name="hint_phonenumber">044 123 4567</string>

    <string name="unit_product_price">€</string>


    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_ebay">Ebay</string>
    <string name="supplier_market">Market</string>

</resources>
